booking about reducers

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <title>Timer -  Pomodoro</title>
 
+    <meta name="author" content="Daniel Koti">
+
   </head>
   <body>
     <div id="root"></div>
